--- a/student.html
+++ b/student.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Student</title>
-    <link rel="stylesheet" href="animation.css">
+	<link rel="stylesheet" href="animation.css">
+	<link rel="icon" href="favicon.svg" type="image/svg" sizes="16x16">
     <style>
         .coming-soon
         {
