added contact us

--- a/About.html
+++ b/About.html
@@ -129,6 +129,22 @@
                 </div>
             </div>
         </div>
+
+        <div class="contact-us page">
+			<img id="bg-12" class="bg-images nav-visible" src="bg-12.svg">
+			 <div class=" wrap">
+				 <h1 class="title-sec">
+					Contact Us
+				 </h1>
+				 <div class="icons">
+					 <a><img src="emaillogo.svg"></a>
+					 <a><img src="instagram.svg"></a>
+					 <a><img src="linked-in.svg"></a>
+					 <a><img src="facebook logo.svg"></a>
+				 </div>
+			 </div>
+		</div>
+
         <footer>
 			<div><img src="logo.svg"><img src="ensvee.svg"></div>
 			<p>Copyright  &copy; 2020</p>
