--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
  
 		<div class="page stories-sec">
 			<div id="bg-11" class="bg-images nav-visible"></div>
-			<img id="bg-12" class="bg-images nav-visible" src="bg-12.svg">
+			
 			<img id="bg-9" class="bg-images nav-visible" src="bg-9.svg">
 			<img id="bg-10" class="bg-images nav-visible" src="bg-10.svg">
 			
@@ -292,17 +292,27 @@
 				
 			</div>  
 		 </div>
- 
+		 <div class="contact-us page">
+			<img id="bg-12" class="bg-images nav-visible" src="bg-12.svg">
+			 <div class=" wrap">
+				 <h1 class="title-sec">
+					Contact Us
+				 </h1>
+				 <div class="icons">
+					 <a><img src="emaillogo.svg"></a>
+					 <a><img src="instagram.svg"></a>
+					 <a><img src="linked-in.svg"></a>
+					 <a><img src="facebook logo.svg"></a>
+				 </div>
+			 </div>
+		</div>
 		 <footer>
-
-		
-			<div><img src="logo.svg"><img src="ensvee.svg"></div>
-			<p>Copyright  &copy; 2020</p>
-		
- 
-		 </footer>
+				<div><img src="logo.svg"><img src="ensvee.svg"></div>
+				<p>Copyright  &copy; 2020</p>
+		</footer>
 
 	</main>
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
