links actually linked

--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
  <body>
 	<header>
 		<div class="header">
-			<a href="" class="logo">
+			<a href="/" class="logo">
 				<span class="logo_img"></span>
 				<img class="logo_text" src="ensvee.svg">
 				<!-- <span class="logo_text">ensvee</span> -->
@@ -24,7 +24,7 @@
 			   <ul class="nav nav-visible">
 					<li ><a href="index.html">enterprise</a></li>
                     <li><a href="student.html">student</a></li>
-                    <li class="active-link"><a href="">about</a></li>
+                    <li class="active-link"><a href="">about us</a></li>
 			   </ul>
 			</nav>
 		</div>
@@ -37,7 +37,7 @@
                     <p>In this forever changing and super competitive market, innovation has become one of the most important assets for a company for sustaining in the market. Also, finding the most suitable person for innovation has always been a pain for not just startups but also blue chips. We are helping startups and companies in getting a leap ahead of their competitors by helping them launch innovation faster. We outsource companies problem to ingenious college students for creating innovative solutions with the widest perspective. These solutions could be a way to break into new markets or could open up entire new customer bases. Simultaneously, We changing the conventional hiring procedures adopted by companies and replacing it with a modern more curated approach which ensures that the company gets the most suited employee for their product without wasting time and resources. Using the latest technology, we find the most befitting college and an excellent group of  students toprovide you with the best possible solution to your problem.</p>
                     <div class="come-join">
                         <h2>Come join the Ensvee family, and become the front runner</h3>
-                        <a href="mailto:connect@ensvee.com">connect@ensvee.com</a>
+                        <a href="mailto:ensvee@gmail.com">ensvee@gmail.com</a>
                     </div> 
                 </div>
         </div>
@@ -136,12 +136,12 @@
 				 <h1 class="title-sec">
 					Contact Us
 				 </h1>
-				 <div class="icons">
-					 <a><img src="emaillogo.svg"></a>
-					 <a><img src="instagram.svg"></a>
-					 <a><img src="linked-in.svg"></a>
-					 <a><img src="facebook logo.svg"></a>
-				 </div>
+                 <div class="icons">
+                    <a href="mailto:ensvee@gmail.com"><img src="emaillogo.svg"></a>
+                    <a href="https://instagram.com/ensvee?igshid=r59rbmwj8x2v"><img src="instagram.svg"></a>
+                    <a href="https://www.linkedin.com/mwlite/company/ensvee"><img src="linked-in.svg"></a>
+                    <a href="https://m.facebook.com/ensvee"><img src="facebook logo.svg"></a>
+                </div>
 			 </div>
 		</div>
 
