--- a/student.html
+++ b/student.html
@@ -27,7 +27,7 @@
 <body style="overflow: hidden; margin: 0;">
 	<header>
 		<div class="header">
-			<a href="" class="logo">
+			<a href="/" class="logo">
 				<span class="logo_img"></span>
 				<img class="logo_text" src="ensvee.svg">
 				<!-- <span class="logo_text">ensvee</span> -->
@@ -39,7 +39,7 @@
 			   <ul class="nav nav-visible">
 					<li ><a href="index.html">enterprise</a></li>
 					<li class="active-link" ><a href="">student</a></li>
-					<li><a href="About.html">about</a></li>
+					<li><a href="About.html">about us</a></li>
 			   </ul>
 			</nav>
 		</div>
