--- a/About.html
+++ b/About.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Ensvee</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="animation.css">
     <link rel="stylesheet" href="about.css">
+    <meta name="description" content="In this forever changing and super competitive market, innovation has become one of the most important assets for a company for sustaining in the market. We are helping startups and companies in getting a leap ahead of their competitors by helping them launch innovation faster.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <link rel="icon" href="favicon.svg" type="image/svg" sizes="16x16">
 </head>
  <body>
 	<header>
 		<div class="header">
 			<a href="/" class="logo">
-				<span class="logo_img"></span>
-				<img class="logo_text" src="ensvee.svg">
+				<span class="logo_img" alt="ensvee logo icon"></span>
+				<img class="logo_text" src="ensvee.svg" alt="ensvee logo text">
 				<!-- <span class="logo_text">ensvee</span> -->
 			</a>
 			 <nav>
@@ -31,13 +33,13 @@
     </header>
     <main>
         <div class="page about-section">
-			<img class="about-bg nav-visible" src="about/bg-about.svg">  
+			<img class="about-bg nav-visible" src="about/bg-about.svg" alt="background image">  
             <div class="wrap">
 					<h1 class="title-sec">About us</h1>
-                    <p>In this forever changing and super competitive market, innovation has become one of the most important assets for a company for sustaining in the market. Also, finding the most suitable person for innovation has always been a pain for not just startups but also blue chips. We are helping startups and companies in getting a leap ahead of their competitors by helping them launch innovation faster. We outsource companies problem to ingenious college students for creating innovative solutions with the widest perspective. These solutions could be a way to break into new markets or could open up entire new customer bases. Simultaneously, We changing the conventional hiring procedures adopted by companies and replacing it with a modern more curated approach which ensures that the company gets the most suited employee for their product without wasting time and resources. Using the latest technology, we find the most befitting college and an excellent group of  students toprovide you with the best possible solution to your problem.</p>
+                    <p>In this forever changing and super competitive market, innovation has become one of the most important assets for a company for sustaining in the market. Also, finding the most suitable person for innovation has always been a pain for not just startups but also blue chips. We are helping startups and companies in getting a leap ahead of their competitors by helping them launch innovation faster. We outsource companies problem to ingenious college students for creating innovative solutions with the widest perspective. These solutions could be a way to break into new markets or could open up entire new customer bases. Simultaneously, We changing the conventional hiring procedures adopted by companies and replacing it with a modern more curated approach which ensures that the company gets the most suited employee for their product without wasting time and resources. Using the latest technology, we find the most befitting college and an excellent group of  students to provide you with the best possible solution to your problem.</p>
                     <div class="come-join">
                         <h2>Come join the Ensvee family, and become the front runner</h3>
-                        <a href="mailto:ensvee@gmail.com">ensvee@gmail.com</a>
+                        <a href="mailto:connect@ensvee.com">connect@ensvee.com</a>
                     </div> 
                 </div>
         </div>
@@ -50,7 +52,7 @@
                 <!-- Abhishek Khandelwal -->   
                     <div class="team-tile">
                         <div class="team-img">
-                        <img src="about/01.png">
+                        <img src="about/01.png" alt="Abhishek Khandelwal, Lead">
                         </div>
                         <div class="team-text">
                             <h3>Abhishek Khandelwal</h3>
@@ -60,7 +62,7 @@
                     
                     <div class="team-tile">
                         <div class="team-img">
-                        <img src="about/02.png">
+                        <img src="about/02.png" alt="Vineet Kumar, Tech Specialist">
                         </div>
                         <div class="team-text">
                             <h3>Vineet Kumar</h3>
@@ -70,7 +72,7 @@
 
                     <div class="team-tile">
                         <div class="team-img">
-                        <img src="about/03.png">
+                        <img src="about/03.png" alt="Vardaan Grover, Marketing Specialist">
                         </div>
                         <div class="team-text">
                             <h3>Vardaan Grover</h3>
@@ -79,7 +81,7 @@
                     </div>
                     <div class="team-tile">
                         <div class="team-img">
-                        <img src="about/04.png">
+                        <img src="about/04.png" alt="Abhinav Garg, Operations Specialist">
                         </div>
                         <div class="team-text">
                             <h3>Abhinav Garg</h3>
@@ -89,7 +91,7 @@
 
                     <div class="team-tile">
                         <div class="team-img">
-                        <img src="about/05.png">
+                        <img src="about/05.png"  alt="Akshad Bhandula, Finance Specialist">
                         </div>
                         <div class="team-text">
                             <h3>Akshad Bhandula</h3>
@@ -99,7 +101,7 @@
 
                     <div class="team-tile">
                         <div class="team-img">
-                        <img src="about/06.png">
+                        <img src="about/06.png" alt="Manoj Kumar, Expansion Specialist">
                         </div>
                         <div class="team-text">
                             <h3>Manoj Kumar</h3>
@@ -108,17 +110,17 @@
                     </div>
                     <div class="team-tile">
                         <div class="team-img">
-                        <img src="about/07.png">
+                        <img src="about/07.png" alt="Unnat Malkot, Web Specialist">
                         </div>
                         <div class="team-text">
-                            <h3>Unnat</h3>
+                            <h3>Unnat Malkoti</h3>
                             <p>Web Specialist</p>
                         </div>
                     </div>
 
                     <div class="team-tile">
                         <div class="team-img">
-                        <img src="about/08.png">
+                        <img src="about/08.png" alt="Shubham Sharma, UX & UI Specialist" >
                         </div>
                         <div class="team-text">
                             <h3>Shubham Sharma</h3>
@@ -131,24 +133,23 @@
         </div>
 
         <div class="contact-us page">
-			<img id="bg-12" class="bg-images nav-visible" src="bg-12.svg">
+			<img id="bg-12" class="bg-images nav-visible" src="bg-12.svg" alt="background image">
 			 <div class=" wrap">
 				 <h1 class="title-sec">
 					Contact Us
 				 </h1>
-                 <div class="icons">
-                    <a href="mailto:ensvee@gmail.com"><img src="emaillogo.svg"></a>
-                    <a href="https://instagram.com/ensvee?igshid=r59rbmwj8x2v"><img src="instagram.svg"></a>
-                    <a href="https://www.linkedin.com/mwlite/company/ensvee"><img src="linked-in.svg"></a>
-                    <a href="https://m.facebook.com/ensvee"><img src="facebook logo.svg"></a>
-                </div>
+				 <div  class="icons">
+					 <a href="mailto:connect@ensvee.com"><img src="emaillogo.svg" alt="email icon"></a>
+					 <a href="https://instagram.com/ensvee?igshid=r59rbmwj8x2v"><img src="instagram.svg" alt="instagram icon"></a>
+					 <a href="https://www.linkedin.com/mwlite/company/ensvee"><img src="linked-in.svg" alt="linkedin icon"></a>
+					 <a href="https://m.facebook.com/ensvee"><img src="facebook logo.svg" alt="facebook icon"></a>
+				 </div>
 			 </div>
 		</div>
-
-        <footer>
-			<div><img src="logo.svg"><img src="ensvee.svg"></div>
-			<p>Copyright  &copy; 2020</p>
-		 </footer>
+		 <footer >
+				<div><img src="logo.svg" alt="ensvee logo icon"><img src="ensvee.svg" alt="ensvee logo text"></div>
+				<p>Copyright  &copy; 2020</p>
+		</footer>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
