--- a/student.html
+++ b/student.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Student</title>
+	<title>Student</title>
+	<meta name="description" content="In this forever changing and super competitive market, innovation has become one of the most important assets for a company for sustaining in the market. We are helping startups and companies in getting a leap ahead of their competitors by helping them launch innovation faster.">
 	<link rel="stylesheet" href="animation.css">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<link rel="icon" href="favicon.svg" type="image/svg" sizes="16x16">
     <style>
         .coming-soon
@@ -28,8 +30,8 @@
 	<header>
 		<div class="header">
 			<a href="/" class="logo">
-				<span class="logo_img"></span>
-				<img class="logo_text" src="ensvee.svg">
+				<span class="logo_img" alt="ensvee logo icon"></span>
+				<img class="logo_text" src="ensvee.svg" alt="ensvee logo text">
 				<!-- <span class="logo_text">ensvee</span> -->
 			</a>
 			 <nav>
@@ -54,7 +56,7 @@
 		<!-- <div style="height: 1000px;"></div> -->
 		
 		<div class="page hero-section">
-			<img class="hero-bg nav-visible" src="1 bg image.svg">  
+			<img class="hero-bg nav-visible" src="1 bg image.svg" alt="background image">  
 			   <div class="wrap">
 					<div class="titles" style>
 						<H1 style="opacity: 1!important; transform: translateX(-50%);" class="coming-soon">Coming Soon!</H1>
