text logo replaced with live text

--- a/student.html
+++ b/student.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Student</title>
+	<title>Ensvee - Student | Coming Soon</title>
 	<meta name="description" content="In this forever changing and super competitive market, innovation has become one of the most important assets for a company for sustaining in the market. We are helping startups and companies in getting a leap ahead of their competitors by helping them launch innovation faster.">
 	<link rel="stylesheet" href="animation.css">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -31,7 +31,7 @@
 		<div class="header">
 			<a href="/" class="logo">
 				<span class="logo_img" alt="ensvee logo icon"></span>
-				<img class="logo_text" src="ensvee.svg" alt="ensvee logo text">
+				<h1 class="logo_text" alt="ensvee logo text">ensvee</h1>
 				<!-- <span class="logo_text">ensvee</span> -->
 			</a>
 			 <nav>
