--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Ensvee</title>
+	<title>Ensveev - About us</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="stylesheet" href="animation.css">
@@ -16,7 +16,7 @@
 		<div class="header">
 			<a href="/" class="logo">
 				<span class="logo_img" alt="ensvee logo icon"></span>
-				<img class="logo_text" src="ensvee.svg" alt="ensvee logo text">
+				<h1 class="logo_text" alt="ensvee logo text">ensvee</h1>
 				<!-- <span class="logo_text">ensvee</span> -->
 			</a>
 			 <nav>
@@ -147,7 +147,7 @@
 			 </div>
 		</div>
 		 <footer >
-				<div><img src="logo.svg" alt="ensvee logo icon"><img src="ensvee.svg" alt="ensvee logo text"></div>
+				<div><img src="logo.svg" alt="ensvee logo icon"><h1 class="logo_text" alt="ensvee logo text">ensvee</h1></div>
 				<p>Copyright  &copy; 2020</p>
 		</footer>
     </main>
